--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           <h5 class="fg-theme mb-3">Web Designer</h5>
           <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
           <ul class="theme-list">
-            <li><b>From:</b> Benapole. Jessore</li>
-            <li><b>Lives In:</b> R.N Road, Jessore</li>
+            <li><b>From:</b> Benapole. Jashore</li>
+            <li><b>Lives In:</b> R.N Road, Jashore</li>
             <li><b>Age:</b> 18</li>
             <li><b>Gender:</b> Male</li>
           </ul>
@@ -189,7 +189,7 @@
               <div class="title">2021 - Current</div>
               <div class="details">
                 <h5>Specialize of course</h5>
-                <small class="fg-theme">DR Abdur Razzak Municpal Collage</small>
+                <small class="fg-theme">DR Abdur Razzak Municpal College,Jashore</small>
                 <p>Section - Humanitis*</p>
               </div>
             </li>
@@ -336,7 +336,7 @@
           <div class="footer-info">
             <p>Where to find me</p>
             <hr class="divider">
-            <p class="fs-large fg-white">R.N Road,Jessore,Bangladesh</p>
+            <p class="fs-large fg-white">R.N Road,Jashore,Bangladesh</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 py-3">
