--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
 
               <li>
-                <div class="title">2021</div>
+                <div class="title">2021-22</div>
                 <div class="details">
                   <h5>Specialize of course</h5>
                   <small class="fg-theme">DR Abdur Razzak Municpal College,Jashore</small>
@@ -203,11 +203,35 @@
               </li>
             </li>
             <li>
-              <div class="title">2019</div>
+              <div class="title">2019-20</div>
               <div class="details">
                 <h5>Specialize of course</h5>
                 <small class="fg-theme">D.H.S</small>
                 <p>Secendary School Certificate</p>
+              </div>
+            </li>
+             <li>
+              <div class="title">2016-18</div>
+              <div class="details">
+                <h5>Specialize of course</h5>
+                <small class="fg-theme">Bornomoy Pre-Cadet and High School</small>
+                <p>Junior School Certificate</p>
+              </div>
+            </li>
+             <li>
+              <div class="title">2009-15</div>
+              <div class="details">
+                <h5>Specialize of course</h5>
+                <small class="fg-theme">Ghiba Goverment Primary School</small>
+                <p>Primary School Certificat</p>
+              </div>
+            </li>
+            i>
+              <div class="title">2008</div>
+              <div class="details">
+                <h5>Specialize of course</h5>
+                <small class="fg-theme">Local Cadet School</small>
+                <p> Nursery</p>
               </div>
             </li>
             
