--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 
   
-  <title>360REVENGER</title>
+  <title>Abdur Rahman (360REVENGER)</title>
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   
@@ -94,8 +94,8 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
-      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Abdur Rahman</b> Sagor</h1>
-      <div class="badge"> Web Designer</div>
+      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Abdur Rahman</b></h1>
+      <div class="badge">Entrepreneur & Web Designer</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
@@ -109,9 +109,9 @@
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
-          <h1 class="fw-light">Abdur Rahman Sagor</h1>
-          <h5 class="fg-theme mb-3">Web Designer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
+          <h1 class="fw-light">Abdur Rahman</h1>
+          <h5 class="fg-theme mb-3"> Entrepreneur and Web Designer</h5>
+          <p class="text-muted">Abdur Rahman is a entrepreneur also a web designer and a little bit developer.<br> Now he want to be a digital entrepreneur to settle new age people. </p>
           <ul class="theme-list">
             <li><b>From:</b> Benapole. Jashore</li>
             <li><b>Lives In:</b> R.N Road, Jashore</li>
