--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Abdur Rahman</h1>
           <h5 class="fg-theme mb-3"> Entrepreneur and Web Designer</h5>
-          <p class="text-muted">Abdur Rahman is a entrepreneur also a web designer and a little bit developer.<br> Now he want to be a digital entrepreneur to settle new age people. </p>
+          <p class="text-muted">Abdur Rahman is a entrepreneur also a web designer and a little bit developer.Now he want to be a digital entrepreneur to settle new age people. </p>
           <ul class="theme-list">
             <li><b>From:</b> Benapole. Jashore</li>
             <li><b>Lives In:</b> R.N Road, Jashore</li>
