--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <div class="details">
                 <h5>Specialize of course</h5>
                 <small class="fg-theme">Jashore Goverment City College,Jashore</small>
-                <p>Section - Philosophy</p>
+                <p>Department - Philosophy</p>
               </div>
 
               <li>
