--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="details">
                   <h5>Specialize of course</h5>
                   <small class="fg-theme">DR Abdur Razzak Municpal College,Jashore</small>
-                  <p>Section - Humanitis*</p>
+                  <p>Section - Humanities</p>
                 </div>
               </li>
             </li>
