--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="img/person.jpg" alt="REVENGER.">
+            <img src="img/IMG_0799.JPG" alt="REVENGER.">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
