--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d900.3397426963709!2d89.22014482920333!3d23.16188799905519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9f71455458147c4e!2zMjPCsDA5JzQyLjgiTiA4OcKwMTMnMTQuNSJF!5e1!3m2!1sen!2sbd!4v1638975663066!5m2!1sen!2sbd" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
+        <form
+            action="https://formspree.io/f/xpwpwqzl"
+            method="POST"
+            >
         <div class="col-lg-5">
           <form class="vg-contact-form">
             <div class="form-row">
@@ -358,7 +362,9 @@
         </div>
       </div>
     </div>
-  </div> <!-- End Contact -->
+  </div>
+  </form>
+  <!-- End Contact -->
   
   <!-- Footer -->
   <div class="vg-footer">
